[gd_scene load_steps=3 format=3 uid="uid://c61gpero4ks2m"]

[ext_resource type="Theme" uid="uid://ddjoduj1ya6tp" path="res://assets/5PFH.tres" id="1_to0eh"]
[ext_resource type="Script" path="res://Resources/Campaign/Phase/PostBattlePhase.gd" id="2_th48e"]

[node name="PostBattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_to0eh")
script = ExtResource("2_th48e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StepLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current Step: "

[node name="StepDescription" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Step description goes here"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StepContent" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NextStepButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next Step"

[node name="FinishPostBattleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Finish Post-Battle Phase"

[connection signal="pressed" from="VBoxContainer/NextStepButton" to="." method="_on_next_step_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FinishPostBattleButton" to="." method="_on_finish_post_battle_button_pressed"]
